--- a/index.html
+++ b/index.html
@@ -2869,7 +2869,7 @@ But how do we mark the position of the asset view that corresponds to the 'detai
 
 <p>We hope you enjoyed your tour of GluJS. If you have any questions, corrections, or any other feedback, please contact me at <a href="mailto:mike@conarrative.com">mike@conarrative.com</a>.</p>
 
-<p><em>Copyright 2012 Mike Gai. All rights reserved.</em></p>
+<p><em>Copyright 2012 CoNarrative. All rights reserved.</em></p>
       </section>
       <footer>
         <p>Project maintained by <a href="https://github.com/CoNarrative">CoNarrative</a></p>
